# central

./: .gitignore  HEADME.md  README.md
drive_central/: README.md  main.py  test_modbus.py  testes.py
drive_central/.env/: pyvenv.cfg
drive_central/Controller/: IO.py  ModbusRTU.py
drive_ea-ed/: CMakeLists.txt  main.c
